--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
 
 <body>
     <header>
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-12">
                     <div class="header-content">
@@ -37,6 +37,7 @@
                             <button>Entrar</button>
                         </div>
                     </div>
+                  
                 </div>
             </div>
         </div>
