--- a/src/index.html
+++ b/src/index.html
@@ -22,9 +22,9 @@
 
 <body>
     <header>
-        <div class="container-fluid">
+        <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div id="p1" class="col-12">
                     <div class="header-content">
                         <div class="cronometro">
 
@@ -32,7 +32,7 @@
 
                             </div>
                         </div>
-                        <div class="ingresso">
+                        <div id="ing" class="ingresso">
                             <button>Comprar Ingresso</button>
                             <button>Entrar</button>
                         </div>
@@ -60,13 +60,13 @@
             <div id="i" class="col-lg-8 col-md-8 col-12">
                 <video src="/src/images/Happy New Year.mp4" type="video/mp4" autoplay muted loop></video>
             </div>
-            <div class="col-lg-4 col-md-4 col-12">
+            <div id="t1" class="col-lg-4 col-md-4 col-12">
                 <h1>Party</h1>
                 <h6>🎉 E aí, galera! Tudo certo? Sou o Francisco e estou aqui para convidar vocês para a festa mais
                     épica do ano: o MEU ANIVERSÁRIO! 🎂🎈 Serão 12 horas de pura diversão com OPEN BAR e um ambiente
                     super seguro! 🍹💥 E o melhor de tudo? Esse header vai te seguir por todo o site, te lembrando da
                     festa a cada clique! 😆👀 E logo abaixo, se prepare para conferir as atrações incríveis que temos
-                    preparadas para vocês. Não vai perder, hein? 😎🚀 VAMOOOOOOOOOOOOOOOOOOOO</h6>
+                    preparadas para vocês. Não vai perder, hein? 😎🚀 VAMOOOOOO</h6>
             </div>
         </div>
 
@@ -74,48 +74,7 @@
 
 
 
-    <div class="container">
-        <div id="ax" class="row">
-            <div id="ay" class="col-12">
-                <h1>Atrações</h1>
-            </div>
-
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="attraction-card">
-                    <img src="images/16082025  2000  Party clube-sp (1).png" alt="Atração 1" class="attraction-image">
-                    <div class="attraction-info">
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="attraction-card">
-                    <img src="images/16082025  2000  Party clube-sp (2).png" alt="Atração 1" class="attraction-image">
-                    <div class="attraction-info">
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="attraction-card">
-                    <img src="images/16082025  2000  Party clube-sp (3).png" alt="Atração 1" class="attraction-image">
-                    <div class="attraction-info">
-
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 col-md-6 col-12">
-                <div class="attraction-card">
-                    <img src="images/16082025  2000  Party clube-sp (4).png" alt="Atração 1" class="attraction-image">
-                    <div class="attraction-info">
-
-                    </div>
-                </div>
-            </div>
-
-
-        </div>
-    </div>
+   
     <div class="container-fluid">
         <div class="row">
             <div class="col-12">
